--- a/dashboard.html
+++ b/dashboard.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>🌌 Sacred Multiverse Dashboard</title>
+  <title>🌌 Sacred Multiverse Live Feed</title>
   <style>
     body { background:#0a0a1a; color:white; font-family:Arial; }
     h1 { text-align:center; color:#ffcc88; }
@@ -10,21 +10,32 @@
     .event { margin:5px 0; padding:5px; background:#222; border-radius:5px; }
     .npc { color:#88ccff; }
     .raid { color:#ff8888; }
+    .player { color:#88ff88; }
+    .log { color:#cccccc; }
   </style>
 </head>
 <body>
   <h1>🌌 Sacred Multiverse Live Feed</h1>
 
+  <!-- Active Players -->
+  <div class="section">
+    <h2>🌟 Active Players</h2>
+    <div id="player-list">Loading...</div>
+  </div>
+
+  <!-- Active NPCs -->
   <div class="section">
     <h2>🌀 Active NPCs</h2>
     <div id="npc-list">Loading...</div>
   </div>
 
+  <!-- Active Raids -->
   <div class="section">
     <h2>⚔️ Active Raids</h2>
     <div id="raid-list">Loading...</div>
   </div>
 
+  <!-- Sacred Logs -->
   <div class="section">
     <h2>📖 Sacred Logs</h2>
     <div id="log-list">Loading...</div>
@@ -33,6 +44,16 @@
   <script type="module">
     import { db } from './firebase.js';
     import { ref, onValue } from "https://www.gstatic.com/firebasejs/10.7.1/firebase-database.js";
+
+    // Active Players
+    onValue(ref(db, 'players'), (snapshot) => {
+      const playerList = document.getElementById('player-list');
+      playerList.innerHTML = '';
+      snapshot.forEach(child => {
+        const player = child.val();
+        playerList.innerHTML += `<div class="event player">${player.name} - Level ${player.level} (${player.status})</div>`;
+      });
+    });
 
     // NPCs
     onValue(ref(db, 'npcs'), (snapshot) => {
@@ -58,7 +79,7 @@
       logList.innerHTML = '';
       snapshot.forEach(child => {
         const log = child.val();
-        logList.innerHTML += `<div class="event">[${log.Time}] ${log.Type} - ${log.Note}</div>`;
+        logList.innerHTML += `<div class="event log">[${log.Time}] ${log.Type} - ${log.Note}</div>`;
       });
     });
   </script>
